# devops

./: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  common.yml  db.sqlite3  django-blog.yml  docker-compose.yml  index.html  mysql-statefulset.yml  nginx.conf  nginx.yml  pip.md  playbook.yml  redis-statefulset.yml  redis.yml.back  start.sh  test_role.yml
.github/workflows/: django.yml  docker-image.yml
ansible/: ansible.cfg  vars.yml
ansible/group_vars/: aliyun.yml
ansible/host_vars/: 120.55.57.128.yml
ansible/redis/: redis.conf.j2  sentinel.conf.j2
blog/: db.sqlite3  forms.py  models.py  urls.py  views.py
blog/blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/mysite/: settings.py
config_ssh/: config_ssh.sh  hosts
css/: blog.css
devtools/: BUILD.bazel  download_repo.py
django/: Dockerfile  README.md  requirements.txt  start.sh
django/blog/: forms.py  metrics.py  middleware.py  urls.py  views.py
django/mysite/: asgi.py  settings.py
docker_container/defaults/: main.yml
docker_container/handlers/: main.yml
docker_container/tasks/: main.yml
docker_container/vars/: main.yml
inventory/: linux
js/: app.js
k8s/: README.md  django-blog.yml  mysql-statefulset.yml  redis.yml
monitoring/: docker-compose.yml  prometheus.yml
mysite/: settings.py  urls.py  wsgi.py
nginx/: Dockerfile  generate_cert.sh  nginx.conf
officialtutorial/: README.md  db.sqlite3
polls/: models.py  urls.py  views.py
prometheus_grafana/: docker-compose.yml
redis/: ansible_redis.yml  redis_master.conf  redis_sub.conf  sentinel.conf
(+30 files in other folders)
